--- a/assets/css/desktop/footer.css
+++ b/assets/css/desktop/footer.css
@@ -23,6 +23,7 @@ footer {
 	flex-direction: column;
 	flex-wrap: wrap;
 	font-size: 28px;
+	font-family: 'Roboto', sans-serif;
 	color: gray;
 	width: 1000px;
 	height: 200px;
@@ -33,7 +34,7 @@ footer {
 	font-size: 25px;
 	text-decoration: none;
 	margin: 10px;
-	font: Roboto;
+	font-family: 'Roboto', sans-serif;
 }
 .tm {
 	width: 80%;
