--- a/assets/css/desktop/header.css
+++ b/assets/css/desktop/header.css
@@ -21,7 +21,8 @@ img {
 .phone {
 	margin: 30px;
 	color: #333333;
-	font-size: 25px;
+	font-size: 23px;
+	font-family: 'Roboto', sans-serif;
 	width: 200px;
 }
 button {
@@ -44,5 +45,5 @@ button {
 	color: black;
 	font-size: 25px;
 	text-decoration: none;
-	font: Roboto;
+	font-family: 'Roboto', sans-serif;
 }
