--- a/assets/css/desktop/style.css
+++ b/assets/css/desktop/style.css
@@ -32,12 +32,15 @@ body {
 	justify-content: space-around;
 }
 h1 {
+	font-family: 'Roboto', sans-serif;
 	font-size: 36px;
 }
 p {
+	font-family: 'Roboto', sans-serif;
 	font-size: 25px;
 }
 .news-1 {
+	font-family: 'Roboto', sans-serif;
 	font-size: 20px;
 	color: red;
 	text-align: center;
@@ -64,13 +67,16 @@ p {
 	height: 50%;
 }
 .services-3 {
+	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	padding: 10px;
 }
 h2 {
+	font-family: 'Roboto', sans-serif;
 	padding: 10px;
 }
 .services-4 {
+	font-family: 'Roboto', sans-serif;
 	color: white;
 	font-size: 18px;
 	margin: 8px;
