--- a/assets/css/desktop/style.css
+++ b/assets/css/desktop/style.css
@@ -81,3 +81,12 @@ h2 {
 	font-size: 18px;
 	margin: 8px;
 }
+.content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.title {
+	display: flex;
+	width: 80%;
+}
