--- a/assets/css/desktop/style.css
+++ b/assets/css/desktop/style.css
@@ -44,9 +44,9 @@ p {
 	font-size: 20px;
 	color: red;
 	text-align: center;
+	text-decoration: none;
 }
 .services {
-
 }
 .services-1 {
 	display: flex;
@@ -59,16 +59,9 @@ p {
 	display: flex;
 	justify-content: space-evenly;
 }
-.services-2 {
-	margin: 0;
-	border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-	width: 100%;
-	height: 50%;
-}
 .services-3 {
 	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
+	font-size: 18px;
 	padding: 10px;
 }
 h2 {
@@ -80,4 +73,13 @@ h2 {
 	color: white;
 	font-size: 18px;
 	margin: 8px;
+}
+.partners {
+	display: flex;
+	flex-direction: column;
+}
+.partners-1 {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
