--- a/assets/css/desktop/about.css
+++ b/assets/css/desktop/about.css
@@ -18,3 +18,8 @@
 	flex-direction: column;
     width: 80%;
 }
+li {
+	font-size: 28px;
+	font-family: 'Roboto', sans-serif;
+	margin-left: 30px;
+}
