--- a/assets/css/desktop/about.css
+++ b/assets/css/desktop/about.css
@@ -18,8 +18,29 @@
 	flex-direction: column;
     width: 90%;
 }
+.about-2 {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 90%;
+}
+.about-3 {
+	display: flex;
+    justify-content: space-around;
+    width: 90%;
+}
+.about-2 a {
+	color: black;
+    font-size: 28px;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+}
 li {
 	font-size: 28px;
 	font-family: 'Roboto', sans-serif;
 	margin-left: 30px;
+}
+a:hover {
+	color: #F04D4C;
+	text-decoration: underline;
 }
