--- a/assets/css/desktop/style.css
+++ b/assets/css/desktop/style.css
@@ -17,7 +17,12 @@ body {
 
 }
 .fasad {
-	border-radius: 10px;
+	border: 2px solid gray;
+	border-radius: 20px;
+	margin: 30px;
+}
+.fasad-1 {
+	border-radius: 20px;
 }
 .news {
 	display: flex;
@@ -87,6 +92,7 @@ h2 {
 }
 .img-1 {
 	margin-top: 10px;
+	border-radius: 20px;
 }
 .trust-1 {
 	line-height: 40px;
