--- a/assets/css/desktop/datepicker.css
+++ b/assets/css/desktop/datepicker.css
@@ -9,15 +9,15 @@
 .datepicker-2 {
 	border: 1px solid gray;
     border-radius: 15px;
-    width: 350px;
+    width: 450px;
 }
 .ui-datepicker-header {
 	margin: 25px;
 	font-size: 20px;
 }
 .ui-datepicker-calendar {
-	width: 300px;
-	height: 300px;
+	width: 400px;
+	height: 400px;
 	margin: 25px auto;
 }
 .ui-datepicker-prev {
@@ -30,12 +30,16 @@
 	text-decoration: none;
 	color: black;
 	font: message-box;
+	font-size: 30px;
 }
 .ui-priority-secondary {
 	color: gray;
 }
 tbody {
 	text-align: center;
+}
+tr {
+	font-size: 28px;
 }
 .ui-state-default:hover {
 	color: red;
